--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,10 +1,10 @@
-name: Teste Marven
+name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -13,13 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up JDK 17 and Maven
+      uses: s4u/setup-maven-action@v1.7.0
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file GOFO\ Implementation/pom.xml
-    - name: Run Tests
-      run: mvn test --file GOFO\ Implementation/pom.xml
+        checkout-fetch-depth: 0
+        java-version: 8
+        java-distribution: temurin
+        maven-version: 3.8.7
+
+    - name: Compilando o Código...
+      run: mvn compile
+
+    - name: Testes de Unidade 1
+      run: mvn -Dtest=TestAdministrator test
