--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,8 @@ jobs:
         java-distribution: temurin
         maven-version: 3.8.7
 
-    - name: Compilando o Código...
-      run: mvn compile
+    - name: Build with Maven
+      run: mvn -B clean install
 
-    - name: Testes de Unidade 1
-      run: mvn -Dtest=TestAdministrator test
+    - name: Run tests
+      run: mvn -B tes
