--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,8 @@ jobs:
         java-distribution: temurin
         maven-version: 3.8.7
 
-     - name: Build with Maven
-      run: mvn -B clean install
+    - name: Compilando...
+      run: mvn compile
 
     - name: Run specific test
-      run: mvn -B test -Dtest=AdministratorTest
+      run: mvn -B test -Dtest=TestAdministrator
