--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <version>3.0.0</version>
                 <configuration>
                 <includes>
-                    <include>*Test.java</include>
+                    <include>**/*Test.java</include>
                 </includes>
             </configuration>
             </plugin>
