--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     
     <groupId>src.codigo</groupId>
-    <artifactId>ProjetoFinaldoCalebe</artifactId>
+    <artifactId>ProjetoFinal</artifactId>
     <version>1.0-SNAPSHOT</version>
     
     <properties>
