--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     
     <groupId>src.codigo</groupId>
-    <artifactId>ProjetoFinal</artifactId>
+    <artifactId>ProjetoFinaldoCalebe</artifactId>
     <version>1.0-SNAPSHOT</version>
     
     <properties>
@@ -30,8 +30,8 @@
     </properties>
 
     <build>
-        <sourceDirectory>GOFO_Implementation/src</sourceDirectory>
-        <testSourceDirectory>GOFO_Implementation/src/test/java</testSourceDirectory>
+        <sourceDirectory>GOFO Implementation/src</sourceDirectory>
+        <testSourceDirectory>GOFO Implementation/src/test/java</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
