--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <version>2.6.3</version>
     </parent>
     
-    <groupId>src.codigo</groupId>
+    <groupId>src</groupId>
     <artifactId>ProjetoFinaldoCalebe</artifactId>
     <version>1.0-SNAPSHOT</version>
     
