--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,8 +24,13 @@ jobs:
     - name: Compilando...
       run: mvn compile
 
-    - name: Build with Maven
-      run: mvn -B clean install
-
-    - name: Run tests
-      run: mvn -B test
+    - name: Testes das Classes
+      run: |
+        mvn test -Dtest=AdministratorTest test;
+        mvn test -Dtest=eWalletTest test;
+        mvn test -Dtest=PlayerTest test;
+        mvn test -Dtest=PlaygroundOwnerTest test;
+        mvn test -Dtest=PlayGroundScheduleTest test;
+        mvn test -Dtest=PlaygroundTest test;
+        EXIT_CODE=$?
+      if: always()
