--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Testes das Classes
       run: |
-        mvn test -Dtest=AdministratorTest test;
+        mvn test -Dtest=AdministratorTest test -Dsurefire.failIfNoSpecifiedTests=false;
         mvn test -Dtest=eWalletTest test;
         mvn test -Dtest=PlayerTest test;
         mvn test -Dtest=PlaygroundOwnerTest test;
